fix: 修正列表清單最大高度問題

--- a/package.json
+++ b/package.json
@@ -18,5 +18,10 @@
   },
   "dependencies": {
     "dayjs": "^1.11.9"
+  },
+  "config": {
+    "commitizen": {
+      "path": "cz-conventional-changelog"
+    }
   }
 }
